docs/pages/versions/v53.0.0/sdk/notifications.mdx
---
title: 通知
description: 一个提供用于获取推送通知令牌，以及展示、安排、接收和响应通知的 API 的库。
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-53/packages/expo-notifications'
packageName: 'expo-notifications'
iconUrl: '/static/images/packages/expo-notifications.png'
platforms: ['android*', 'ios*']
---

import { NotificationBoxIcon } from '@expo/styleguide-icons/outline/NotificationBoxIcon';

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { AndroidPermissions } from '~/components/plugins/permissions';
import { BoxLink } from '~/ui/components/BoxLink';
import { Collapsible } from '~/ui/components/Collapsible';
import { ConfigReactNative, ConfigPluginProperties } from '~/ui/components/ConfigSection';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';
import { SnackInline } from '~/ui/components/Snippet';
import { Tab, Tabs } from '~/ui/components/Tabs';
import { PlatformTags } from '~/ui/components/Tag/PlatformTags';

`expo-notifications` 提供了一个用于获取推送通知令牌，以及展示、安排、接收和响应通知的 API。

<BoxLink
  title="Notification guides"
  description="Do not miss our guides on how to set up, send, and handle push notifications."
  href="/push-notifications/overview/"
  Icon={NotificationBoxIcon}
/>

> **warning** 从 SDK 53 开始，`expo-notifications` 提供的推送通知（远程通知）功能在 Android 版 Expo Go 中不可用。使用推送通知需要一个 [development build](/develop/development-builds/introduction/)。本地通知（应用内通知）在 Expo Go 中仍然可用。

## Features

- 为特定日期或从现在起的一段时间安排一次性通知
- 在某个时间间隔后重复安排通知（或在 iOS 上按日历日期匹配）
- 获取并设置应用角标图标数字
- 获取原生设备推送令牌，以便你可以使用 FCM（用于 Android）和 APNs（用于 iOS）发送推送通知
- 获取 Expo 推送令牌，以便你可以使用 [Expo Push Service](/push-notifications/sending-notifications/) 发送推送通知
- 监听前台和后台传入的通知
- 监听与通知的交互
- 当应用处于前台时处理通知
- 主动从通知中心/托盘中关闭通知
- 创建、更新和删除 [Android 通知渠道](https://developer.android.com/develop/ui/views/notifications/channels)
- 为 Android 上的通知设置自定义图标和颜色

## Installation

<APIInstallSection />

<br />
然后继续查看 [configuration](#configuration)，以设置 [config plugin](#app-config) 并获取推送通知所需的 [credentials](#credentials)。

## Usage

查看下面的示例 Snack，了解 Notifications 的实际效果；请务必使用真机进行测试。推送通知无法在模拟器/仿真器上工作。

<SnackInline label='Push Notifications' dependencies={['expo-device', 'expo-constants', 'expo-notifications']}>

```tsx
import { useState, useEffect, useRef } from 'react';
import { Text, View, Button, Platform } from 'react-native';
import * as Device from 'expo-device';
import * as Notifications from 'expo-notifications';
import Constants from 'expo-constants';

Notifications.setNotificationHandler({
  handleNotification: async () => ({
    shouldPlaySound: false,
    shouldSetBadge: false,
    shouldShowBanner: true,
    shouldShowList: true,
  }),
});

export default function App() {
  const [expoPushToken, setExpoPushToken] = useState('');
  const [channels, setChannels] = useState<Notifications.NotificationChannel[]>([]);
  const [notification, setNotification] = useState<Notifications.Notification | undefined>(
    undefined
  );

  useEffect(() => {
    registerForPushNotificationsAsync().then(token => token && setExpoPushToken(token));

    if (Platform.OS === 'android') {
      Notifications.getNotificationChannelsAsync().then(value => setChannels(value ?? []));
    }
    const notificationListener = Notifications.addNotificationReceivedListener(notification => {
      setNotification(notification);
    });

    const responseListener = Notifications.addNotificationResponseReceivedListener(response => {
      console.log(response);
    });

    return () => {
      notificationListener.remove();
      responseListener.remove();
    };
  }, []);

  return (
    <View
      style={{
        flex: 1,
        alignItems: 'center',
        justifyContent: 'space-around',
      }}>
      <Text>Your expo push token: {expoPushToken}</Text>
      <Text>{`Channels: ${JSON.stringify(
        channels.map(c => c.id),
        null,
        2
      )}`}</Text>
      <View style={{ alignItems: 'center', justifyContent: 'center' }}>
        <Text>Title: {notification && notification.request.content.title} </Text>
        <Text>Body: {notification && notification.request.content.body}</Text>
        <Text>Data: {notification && JSON.stringify(notification.request.content.data)}</Text>
      </View>
      <Button
        title="Press to schedule a notification"
        onPress={async () => {
          await schedulePushNotification();
        }}
      />
    </View>
  );
}

async function schedulePushNotification() {
  await Notifications.scheduleNotificationAsync({
    content: {
      title: "You've got mail! 📬",
      body: 'Here is the notification body',
      data: { data: 'goes here', test: { test1: 'more data' } },
    },
    trigger: {
      type: Notifications.SchedulableTriggerInputTypes.TIME_INTERVAL,
      seconds: 2,
    },
  });
}

async function registerForPushNotificationsAsync() {
  let token;

  if (Platform.OS === 'android') {
    await Notifications.setNotificationChannelAsync('myNotificationChannel', {
      name: '显示权限提示所需的频道',
      importance: Notifications.AndroidImportance.MAX,
      vibrationPattern: [0, 250, 250, 250],
      lightColor: '#FF231F7C',
    });
  }

  if (Device.isDevice) {
    const { status: existingStatus } = await Notifications.getPermissionsAsync();
    let finalStatus = existingStatus;
    if (existingStatus !== 'granted') {
      const { status } = await Notifications.requestPermissionsAsync();
      finalStatus = status;
    }
    if (finalStatus !== 'granted') {
      alert('获取推送通知的推送令牌失败！');
      return;
    }
    // 了解更多关于 projectId 的信息：
    // https://docs.expo.dev/push-notifications/push-notifications-setup/#configure-projectid
    // 这里使用的是 EAS projectId。
    try {
      const projectId =
        Constants?.expoConfig?.extra?.eas?.projectId ?? Constants?.easConfig?.projectId;
      if (!projectId) {
        throw new Error('未找到项目 ID');
      }
      token = (
        await Notifications.getExpoPushTokenAsync({
          projectId,
        })
      ).data;
      console.log(token);
    } catch (e) {
      token = `${e}`;
    }
  } else {
    alert('推送通知必须使用真机');
  }

  return token;
}
```

</SnackInline>

### 向用户展示本地（应用内）通知

```ts
import * as Notifications from 'expo-notifications';

// 首先，设置将触发通知显示提醒的处理器
Notifications.setNotificationHandler({
  handleNotification: async () => ({
    shouldShowBanner: true,
    shouldShowList: true,
    shouldPlaySound: false,
    shouldSetBadge: false,
  }),
});

// 其次，调用 scheduleNotificationAsync()
Notifications.scheduleNotificationAsync({
  content: {
    title: '看看这个通知',
    body: '我为自己感到非常骄傲！',
  },
  trigger: null,
});
```

### 通过导航处理推送通知

如果你希望在收到推送通知时深度链接到应用中的某个特定屏幕，可以配置 Expo 的任一导航系统来实现。

<Tabs>

<Tab label="Expo Router">

你可以使用 Expo Router 的 [内置深度链接](/router/basics/core-concepts/#2-all-pages-have-a-url) 来处理来自推送通知的传入 URL。只需配置根布局来监听传入和初始通知事件即可。

```tsx app/_layout.tsx
import { useEffect } from 'react';
import * as Notifications from 'expo-notifications';
import { router } from 'expo-router';

function useNotificationObserver() {
  useEffect(() => {
    let isMounted = true;

    function redirect(notification: Notifications.Notification) {
      const url = notification.request.content.data?.url;
      if (url) {
        /* @info 推送该 URL。你可能希望在导航前验证格式。 */
        router.push(url);
        /* @end */
      }
    }

    /* @info 处理初始推送通知。 */
    Notifications.getLastNotificationResponseAsync() /* @end */
      .then(response => {
        if (!isMounted || !response?.notification) {
          return;
        }
        redirect(response?.notification);
      });

    /* @info 监听运行时通知。 */
    const subscription = Notifications.addNotificationResponseReceivedListener(response => {
      /* @end */
      redirect(response.notification);
    });

    return () => {
      isMounted = false;
      subscription.remove();
    };
  }, []);
}

export default function Layout() {
  /* @info 在根节点进行监听。确保此布局永远不会返回 <b>null</b>，否则导航将无法处理。 */
  useNotificationObserver();
  /* @end */

  return <Slot />;
}
```

</Tab>

<Tab label="React Navigation">

React Navigation 的手动 [linking 配置](https://reactnavigation.org/docs/navigation-container#linking) 可以用于处理来自推送通知的传入重定向：

```tsx App.tsx
import React from 'react';
import { Linking } from 'react-native';
import * as Notifications from 'expo-notifications';
import { NavigationContainer } from '@react-navigation/native';

export default function App() {
  return (
    <NavigationContainer
      linking={{
        config: {
          // linking 的配置
        },
        async getInitialURL() {
          // 首先，你可能希望执行默认的深度链接处理
          // 检查应用是否是通过深度链接打开的
          const url = await Linking.getInitialURL();

          if (url != null) {
            return url;
          }

          // 处理来自 expo 推送通知的 URL
          const response = await Notifications.getLastNotificationResponseAsync();

          return response?.notification.request.content.data.url;
        },
        subscribe(listener) {
          const onReceiveURL = ({ url }: { url: string }) => listener(url);

          // 监听来自深度链接的传入链接
          const eventListenerSubscription = Linking.addEventListener('url', onReceiveURL);

          // 监听 expo 推送通知
          const subscription = Notifications.addNotificationResponseReceivedListener(response => {
            const url = response.notification.request.content.data.url;

            // 任何用于判断是否需要处理该 URL 的自定义逻辑
            //...

            // 让 React Navigation 处理该 URL
            listener(url);
          });

          return () => {
            // 清理事件监听器
            eventListenerSubscription.remove();
            subscription.remove();
          };
        },
      }}>
      {/* 你的应用内容 */}
    </NavigationContainer>
  );
}
```

更多详情请参阅 [React Navigation 文档](https://reactnavigation.org/docs/deep-linking/#third-party-integrations)。

</Tab>

</Tabs>

## 配置

### 凭据

请遵循 [设置指南](/push-notifications/push-notifications-setup/#get-credentials-for-development-builds)。

### 应用配置

要配置 `expo-notifications`，请在应用配置（**app.json** 或 **app.config.js**）中使用内置的 [配置插件](/config-plugins/introduction/)，适用于 [EAS Build](/build/introduction) 或通过 `npx expo run:[android|ios]`。该插件允许你配置以下属性，这些属性无法在运行时设置，且需要构建新的应用二进制文件后才会生效：

<ConfigPluginProperties
  properties={[
    {
      name: 'icon',
      platform: 'android',
      description:
        '用于推送通知图标的图片本地路径。96x96 的全白 PNG，带透明背景。',
    },
    {
      name: 'color',
      default: '#ffffff',
      platform: 'android',
      description:
        '推送通知图片在通知栏中显示时的着色颜色。',
    },
    {
      name: 'defaultChannel',
      platform: 'android',
      description: 'FCMv1 通知的默认频道。',
    },
    {
      name: 'sounds',
      description:
        '可作为自定义通知声音的音频文件本地路径数组（建议使用 .wav）。当焦点模式不允许或静音模式开启时，不会播放声音。',
    },
    {
      name: 'enableBackgroundRemoteNotifications',
      default: 'false',
      platform: 'ios',
      description:
        '是否启用后台远程通知，如 [Apple 文档](https://developer.apple.com/documentation/usernotifications/pushing-background-updates-to-your-app) 中所述。这会更新 `Info.plist` 中的 `UIBackgroundModes` 键，以包含 `remote-notification`。',
    },
  ]}
/>

下面是一个在应用配置文件中使用该配置插件的示例：

```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-notifications",
        {
          "icon": "./local/assets/notification_icon.png",
          "color": "#ffffff",
          "defaultChannel": "default",
          "sounds": [
            "./local/assets/notification_sound.wav",
            "./local/assets/notification_sound_other.wav"
          ],
          "enableBackgroundRemoteNotifications": false
        }
      ]
    ]
  }
}
```

> iOS APNs entitlement _始终_ 设置为 'development'。Xcode 会在发布构建生成的归档中自动将其更改为 'production'。
> [了解更多](https://stackoverflow.com/a/42293632/4047926)。

<ConfigReactNative>

了解如何在 [expo-notifications 仓库中的安装说明](https://github.com/expo/expo/tree/main/packages/expo-notifications#installation-in-bare-react-native-projects) 里配置原生项目。

</ConfigReactNative>

## 权限

### Android

- 在 Android 上，此模块需要获得订阅设备启动的权限。它用于在设备（重新）启动时设置计划通知。
  `RECEIVE_BOOT_COMPLETED` 权限会通过该库的 **AndroidManifest.xml** 自动添加。

- 从 Android 12（API 级别 31）开始，要安排在精确时间触发的通知，你需要在 **AndroidManifest.xml** 中添加
  `<uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>`。
  了解更多关于 [精确闹钟权限](https://developer.android.com/about/versions/12/behavior-changes-12#exact-alarm-permission) 的信息。

- 在 Android 13 上，应用用户必须通过操作系统自动触发的权限提示来选择接收通知。
  直到至少创建一个通知频道后，此提示才会出现。必须先调用 `setNotificationChannelAsync`，再调用
  `getDevicePushTokenAsync` 或 `getExpoPushTokenAsync` 才能获取推送令牌。你可以在 [官方文档](https://developer.android.com/develop/ui/views/notifications/notification-permission#new-apps) 中了解更多关于 Android 13 新通知权限行为的信息。

<AndroidPermissions permissions={['RECEIVE_BOOT_COMPLETED', 'SCHEDULE_EXACT_ALARM']} />

### iOS

不需要使用说明，请参阅 [与通知相关的权限](#fetch-information-about-notifications-related-permissions)。

### 解释 iOS 权限响应

在 iOS 上，发送通知的权限比 Android 更细化一些。这就是为什么你应该依赖 `NotificationPermissionsStatus` 的 `ios.status` 字段，而不是根级的 `status` 字段。

该值将是以下之一，可在 `Notifications.IosAuthorizationStatus` 下访问：

- `NOT_DETERMINED`：用户尚未就应用是否被允许安排通知做出选择
- `DENIED`：应用未被授权安排或接收通知
- `AUTHORIZED`：应用已被授权安排或接收通知
- `PROVISIONAL`：应用被临时授权发布不打断用户的通知
- `EPHEMERAL`：应用被授权在有限时间内安排或接收通知

## 通知事件监听器

通知事件包括传入的通知、用户对通知执行的交互（这可能是点击通知，或通过 [通知类别](#manage-notification-categories-interactive-notifications) 与之交互），以及通知可能被丢弃的少数情况。

多个监听器已公开并在 [推送通知行为](/push-notifications/what-you-need-to-know/#push-notification-behaviors) 部分中有文档说明。

## 无头（后台）通知

请参阅 [你需要了解的内容](/push-notifications/what-you-need-to-know) 指南中的无头后台通知 [定义](/push-notifications/what-you-need-to-know/#headless-background-notifications)。

要在应用处于后台或未运行时处理通知，你需要执行以下操作：

- 将 `expo-task-manager` 包添加到你的项目中。
- [配置后台通知](#background-notification-configuration)。
- 在你的应用代码中，设置一个在收到通知时运行的 [后台任务](#registertaskasynctaskname)。

然后发送一个满足以下条件的推送通知：

- 仅包含 `data` 键（不包含 `title`、`body`）
- 对 iOS 设置 `_contentAvailable: true` —— 参见 [Expo 推送通知服务负载格式](/push-notifications/sending-notifications/#message-request-format)

### 后台通知配置&ensp;<PlatformTags platforms={["ios"]} />

要在 iOS 上使用后台推送通知，需要在应用的 **Info.plist** 文件中的 `UIBackgroundModes` 数组里包含 `remote-notification` 值。

**如果你正在使用 [CNG](/workflow/continuous-native-generation/)**，请将配置插件的 [`enableBackgroundRemoteNotifications` 属性](#configurable-properties) 设为 true，预构建会自动应用正确的配置。

<Collapsible summary="在 iOS 上手动配置 UIBackgroundModes">

如果你没有使用 Continuous Native Generation（[CNG](/workflow/continuous-native-generation/)），或者你正在使用原生 iOS 项目，那么你需要在 **Expo.plist** 文件中添加以下内容：

```xml ios/project-name/Supporting/Expo.plist
<key>UIBackgroundModes</key>
<array>
  <string>remote-notification</string>
</array>
```

</Collapsible>

## 其他信息

### 设置自定义通知声音

要为你的应用添加自定义推送通知声音，请将 `expo-notifications` 插件添加到 **app.json** 文件中，然后在 `sounds` 键下提供一个可用作自定义通知声音的本地音频文件路径数组。这些本地路径相对于你的项目。

```json app.json
{
  "expo": {
    "plugins": [
      [
        "expo-notifications",
        {
          "sounds": ["local/path/to/mySoundFile.wav"]
        }
      ]
    ]
  }
}
```

构建应用后，这个文件数组可用于 [`NotificationContentInput`](#notificationcontentinput) 和 [`NotificationChannelInput`](#notificationchannelinput)。
你只需要提供基础文件名。以下是使用上面配置的示例：

```ts
await Notifications.setNotificationChannelAsync('new_emails', {
  name: '电子邮件通知',
  importance: Notifications.AndroidImportance.HIGH,
  sound: 'mySoundFile.wav', // 仅提供基础文件名
});

await Notifications.scheduleNotificationAsync({
  content: {
    title: "You've got mail! 📬",
    sound: 'mySoundFile.wav', // 仅提供基础文件名
  },
  trigger: {
    type: Notifications.SchedulableTriggerInputTypes.TIME_INTERVAL,
    seconds: 2,
    channelId: 'new_emails',
  },
});
```

如果你愿意，也可以手动将通知文件添加到你的 Android 和 iOS 项目中：

<Collapsible summary="在 Android 上手动添加通知声音">

在 Android 8.0+ 上，为通知播放自定义声音不仅仅需要在 `NotificationContentInput` 上设置 `sound` 属性。
你还需要为 `NotificationChannel` 配置合适的 `sound`，并在发送/安排通知时使用它。

要使下面的示例生效，你需要将 **email_sound.wav** 文件放在 **android/app/src/main/res/raw/** 中。

```ts
// 准备通知频道
await Notifications.setNotificationChannelAsync('new_emails', {
  name: '电子邮件通知',
  importance: Notifications.AndroidImportance.HIGH,
  sound: 'email_sound.wav', // <- 对于 Android 8.0+，请参见下方 channelId 属性
});

// 例如，安排通知
await Notifications.scheduleNotificationAsync({
  content: {
    title: "You've got mail! 📬",
    body: '打开通知以阅读全部内容',
    sound: 'email_sound.wav', // <- 对于 Android 8.0 以下
  },
  trigger: {
    type: Notifications.SchedulableTriggerInputTypes.TIME_INTERVAL,
    seconds: 2,
    channelId: 'new_emails', // <- 对于 Android 8.0+，请参见上面的定义
  },
});
```

</Collapsible>

<Collapsible summary="在 iOS 上手动添加通知声音">

在 iOS 上，只需将你的声音文件放入 Xcode 项目中（见下方截图），然后像这样在 `NotificationContentInput` 中指定声音文件：

```ts
await Notifications.scheduleNotificationAsync({
  content: {
    title: "You've got mail! 📬",
    body: '打开通知以阅读全部内容',
    sound: 'notification.wav',
  },
  trigger: {
    // ...
  },
});
```

<ContentSpotlight
  alt="notification.wav inside of app resources in Xcode project organizer"
  src="/static/images/notification-sound-ios.jpeg"
  className="max-w-[305px]"
/>

</Collapsible>

### 推送通知负载规范

请参阅 [消息请求格式](/push-notifications/sending-notifications/#message-request-format)。

### 管理交互式通知的通知类别

通知类别允许你创建交互式推送通知，使用户可以直接通过按钮或文本响应来回复传入通知。类别定义了用户可以执行的一组操作，然后通过在 [`NotificationContent`](#notificationcontent) 中指定 `categoryIdentifier` 将这些操作应用到通知上。

<ContentSpotlight
  src="/static/images/sdk/notifications/categories.png"
  className="max-w-[800px]"
  alt="Android 和 iOS 上的通知类别图片"
/>

在 iOS 上，通知类别还允许你进一步自定义通知。对于每个类别，你不仅可以设置用户可执行的交互操作，还可以配置诸如当用户为你的应用禁用通知预览时显示的占位文本等内容。

## 平台特定指南

### 处理通知渠道&ensp;<PlatformTags platforms={['android 8+']} />

从 Android 8.0（API 级别 26）开始，所有通知都必须分配到某个渠道。对于每个渠道，
你可以设置应用于该渠道中所有通知的视觉和声音行为。
然后，用户可以更改这些设置，并决定你应用中的哪些通知渠道应该具有打扰性，或者哪些通知渠道根本应该可见，
正如 [Android 开发者文档](https://developer.android.com/training/notify-user/channels) 所述。

如果你没有指定通知渠道，`expo-notifications` 会为你创建一个名为 **Miscellaneous** 的备用渠道。
我们建议你始终为应用设置具有说明性名称的合适渠道，并始终将通知发送到这些渠道。

> 对于不支持此功能的平台（Android 8.0（26）以下版本和 iOS），调用这些方法不会产生任何作用。

### 自定义通知图标和颜色&ensp;<PlatformTags platforms={['android']} />

如果你使用的是 [Expo Prebuild](/workflow/continuous-native-generation)，你可以在项目的 **app.json** 中配置 [`notification.icon`](../config/app/#notification) 和 [`notification.color`](../config/app/#notification) 键；或者也可以直接使用 [`expo-notifications` 配置插件](#configurable-properties)。这些都是构建时设置，因此你需要使用 `eas build -p android` 或 `npx expo run:android` 重新编译原生 Android 应用才能看到更改。

对于通知图标，请确保遵循 [Google 的设计指南](https://material.io/design/iconography/product-icons.html#design-principles)
（图标必须全白且背景透明），否则它可能无法按预期显示。

你也可以在 [`NotificationContentInput`](#notificationcontentinput) 中直接通过 `color` 属性为**每条通知**设置自定义通知颜色。

## API

```js
import * as Notifications from 'expo-notifications';
```

<APISection
  packageName="expo-notifications"
  apiName="Notifications"
  headersMapping={{
    fetch: '获取推送通知令牌',
    listen: '监听通知事件',
    inForeground: '当应用运行时显示传入通知',
    inBackground: '响应传入通知时运行 JavaScript',
    permissions: '获取与通知相关的权限信息',
    badge: '管理应用角标图标',
    schedule: '安排通知',
    dismiss: '关闭通知',
    channels: '管理通知渠道（Android 特定）',
    categories: '管理通知类别（交互式通知）',
  }}
/>
